# nfs-antivirus

./: nfs-antivirus.spec
nfs-antivirus-0.1/: Makefile
nfs-antivirus-0.1/lib/: NFSantivirus.desktop  NFSantivirus.desktop-2
nfs-antivirus-0.1/src/: .antivirus.bak.c.swp  .antivirus.sunff.c.swp  Makefile.am  antivirus.c  antivirus.h  antivirusCron  auto_deal_warn_dialog.c  auto_handle.c  auto_handle.h  autostart-NFS  deal_crontab.c  filechooser.c  filechooser.h  function.c  function.h  real_protect_result_page.c  real_protect_result_page.h  refresh.c  refresh.h  result.c  result.h  result_detail.c  result_detail.h  resultcallbackFunc.c  resultcallbackFunc.h  scan.c  scan.h  sharememory.c  sharememory.h  start-NFS  upgrade.c  upgradeFunction.c  upgradeFunction.h  writelog.c  writelog.h  writeresult.c  writeresult.h
nfs-antivirus-0.1/src/AVL3bin/: add_white_list.sh  antifeedback  antivirus  auto_handle.sh  boot_start.sh  deal_crontab.sh  deal_firefox_download.sh  delete_result_inWhiteList.sh  detect_usb  gtkExample2.css  list.txt  recovery.sh  regular_expression_match.sh  startcrontab  version.txt
nfs-antivirus-0.1/src/auto_defense/: cdos-antivirus.desktop-autostart  detect_usb.desktop
nfs-antivirus-0.1/src/config/: antivirus-un-use.conf  antivirus-use.conf  sys_package_list
nfs-antivirus-0.1/src/css/: home-anti-chinese.css  home-anti.css  home-title-chinese.css  home-title.css  log-note-chinese.css  log-note.css  log-page-chinese.css  log-page.css  result-chinese.css  result.css  scan_process_page-chinese.css  scan_process_page.css  setting-note-chinese.css  setting-note.css  setting-page-chinese.css  setting-page.css  tipdialog-chinese.css  tipdialog.css  version-chinese.css  version.css
nfs-antivirus-0.1/src/deal/: home_handle.c  home_handle.h  isolation_handle.c  isolation_handle.h  log_handle.c  log_handle.h  setting_handler.c  setting_handler.h  tray_handle.c  tray_handle.h
nfs-antivirus-0.1/src/desktop/: cdos-antivirus.desktop
nfs-antivirus-0.1/src/detect_usb/: autorun-detectUsb  autorunDetectUsb  detect_usb  detect_usb.c  detect_usb.desktop  detect_usb.h
nfs-antivirus-0.1/src/images/: aboutpage_introduce.png_old
nfs-antivirus-0.1/src/interface/: AVLSDK30s_interface.h  AVLSDK_conf_idx.h  AVLSDK_rpt_idx.h  ID2Name_interface.h  engine.h  error_code.h
nfs-antivirus-0.1/src/page/: about-page.c  about-page.h  home-page.c  home-page.h  isolation-recovery-page.c  isolation-recovery-page.h  log-page.c  log-page.h  scanprocess-page.c  scanprocess-page.h  setting-page.c  setting-page.h  upgrade-page.c  upgrade-page.h
nfs-antivirus-0.1/src/po/: antivirus.mo  antivirus.po
nfs-antivirus-0.1/src/real_protect/: real_protect_dialog.c
nfs-antivirus-0.1/src/timeantivirus/: all_timeantivirus.sh  quick_timeantivirus.sh
nfs-antivirus-0.1/src/upgrade/: .Service.c.swp  ftp.sh  ftpAddr.txt  split.sh  start.sh  upgrade  upgrade.c  upgrade.h  upgradeself.c  upgradeself.h
